add custom button

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Components</title>
+    <script defer type="module" src="components/Button/Button.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Web Components</h1>
+    <div class="item">
+      <h2>Customized built in button</h2>
+      <button is="styled-btn">Click me!</button>
+    </div>
   </body>
 </html>
