--- a/index.html
+++ b/index.html
@@ -4,14 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Components</title>
-    <script defer type="module" src="components/Button/Button.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <script defer type="module" src="components/Button/Button.js"></script>
+    <script
+      defer
+      type="module"
+      src="components/ExpandingList/ExpandingList.js"></script>
   </head>
   <body>
     <h1>Web Components</h1>
     <div class="item">
       <h2>Customized built in button</h2>
       <button is="styled-btn">Click me!</button>
+    </div>
+    <div class="item">
+      <h2>Customized expanding list</h2>
+      <ul is="expanding-list">
+        <li>
+          UK
+          <ul>
+            <li>
+              Yorkshire
+              <ul>
+                <li>
+                  Leeds
+                  <ul>
+                    <li>Train station</li>
+                    <li>Town hall</li>
+                    <li>Headrow</li>
+                  </ul>
+                </li>
+                <li>Bradford</li>
+                <li>Hull</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li>
+          USA
+          <ul>
+            <li>
+              California
+              <ul>
+                <li>Los Angeles</li>
+                <li>San Francisco</li>
+                <li>Berkeley</li>
+              </ul>
+            </li>
+            <li>Nevada</li>
+            <li>Oregon</li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
