--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Components</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer type="module" src="components/Button/Button.js"></script>
-    <script
-      defer
-      type="module"
-      src="components/ExpandingList/ExpandingList.js"></script>
+    <script defer src="components/Button/Button.js"></script>
+    <script defer src="components/ExpandingList/ExpandingList.js"></script>
   </head>
   <body>
     <h1>Web Components</h1>
