--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <li>
           UK
           <ul>
-            <li>
+            <li style="--li-color: Chartreuse">
               Yorkshire
               <ul>
-                <li>
+                <li style="--li-color: LawnGreen">
                   Leeds
                   <ul>
-                    <li>Train station</li>
-                    <li>Town hall</li>
-                    <li>Headrow</li>
+                    <li style="--li-color: Lime">Train station</li>
+                    <li style="--li-color: MediumSpringGreen">Town hall</li>
+                    <li style="--li-color: SpringGreen">Headrow</li>
                   </ul>
                 </li>
-                <li>Bradford</li>
-                <li>Hull</li>
+                <li style="--li-color: MediumAquamarine">Bradford</li>
+                <li style="--li-color: LightSeaGreen">Hull</li>
               </ul>
             </li>
           </ul>
@@ -41,16 +41,16 @@
         <li>
           USA
           <ul>
-            <li>
+            <li style="--li-color: HotPink">Nevada</li>
+            <li style="--li-color: Fuchsia">
               California
               <ul>
-                <li>Los Angeles</li>
-                <li>San Francisco</li>
-                <li>Berkeley</li>
+                <li style="--li-color: Magenta">Los Angeles</li>
+                <li style="--li-color: MediumOrchid">San Francisco</li>
+                <li style="--li-color: MediumPurple">Berkeley</li>
               </ul>
             </li>
-            <li>Nevada</li>
-            <li>Oregon</li>
+            <li style="--li-color: BlueViolet">Oregon</li>
           </ul>
         </li>
       </ul>
@@ -67,21 +67,17 @@
         </slot>
 
         <div class="body">
-          <heading class="heading">
-            <slot name="card-heading"><h3>Heading</h3></slot>
-          </heading>
-          <div class="description">
-            <slot name="card-description">
-              <p>This is a short description about the card.</p>
-            </slot>
-          </div>
-        </div>
-
-        <div class="actions">
-          <slot name="card-action">
-            <button type="button">Action</button>
+          <slot name="card-heading" class="heading">
+            <h3>Heading</h3>
+          </slot>
+          <slot name="card-description" class="description">
+            <p>This is a short description about the card.</p>
           </slot>
         </div>
+
+        <slot name="card-action" class="actions">
+          <button type="button">Action</button>
+        </slot>
       </template>
 
       <div class="card-container">
