--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script defer src="components/Button/Button.js"></script>
     <script defer src="components/ExpandingList/ExpandingList.js"></script>
     <script defer src="components/Card/Card.js"></script>
+    <script defer src="components/DateAgo/DateAgo.js"></script>
   </head>
   <body>
     <h1>Web Components</h1>
@@ -57,7 +58,6 @@
     </div>
     <div class="item">
       <h2>Automonous card using template & slot</h2>
-
       <div class="card-container">
         <custom-card>
           <img
@@ -86,6 +86,10 @@
         </custom-card>
         <custom-card></custom-card>
       </div>
+    </div>
+    <div class="item">
+      <h2>Custom element which tells you relative time</h2>
+      <date-ago date="2020-06-05 15:00 UTC"></date-ago>
     </div>
   </body>
 </html>
